--- a/lab04/Exercise3/style.css
+++ b/lab04/Exercise3/style.css
@@ -4,7 +4,7 @@ body{
   background-repeat: no-repeat;
   background-size: 100%;
   backface-visibility: hidden;
-
+box-sizing: border-box;
 }
 h1{
   font-size: 5;
